--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -7,8 +7,8 @@
     <uses-sdk
         android:minSdkVersion="11"
         android:targetSdkVersion="17" />
-    
-     <permission
+
+    <permission
         android:name="com.example.mapstest.permission.MAPS_RECEIVE"
         android:protectionLevel="signature" />
 
@@ -21,10 +21,13 @@
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
     <uses-permission android:name="android.permission.CAMERA" />
-    
-    <uses-feature android:name="android.hardware.camera" android:required="true" />
-    <uses-feature android:name="android.hardware.camera.autofocus" android:required="false" />
-    
+
+    <uses-feature
+        android:name="android.hardware.camera"
+        android:required="true" />
+    <uses-feature
+        android:name="android.hardware.camera.autofocus"
+        android:required="false" />
     <uses-feature
         android:glEsVersion="0x00020000"
         android:required="true" />
@@ -98,10 +101,15 @@
             android:label="@string/title_activity_map_green"
             android:theme="@style/noAnimTheme" >
         </activity>
-        
+
         <meta-data
             android:name="com.google.android.maps.v2.API_KEY"
             android:value="AIzaSyC3XKhXp0LPQCq6TrxgO8nSYz26NexL3c8" />
+
+        <activity
+            android:name="com.example.wifimanagerprototype.CompassTestActivity"
+            android:label="@string/title_activity_compass_test" >
+        </activity>
     </application>
 
 </manifest>
