--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -34,7 +34,7 @@
 
     <application
         android:allowBackup="true"
-        android:icon="@drawable/ic_launcher"
+        android:icon="@drawable/wifi_launcher"
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
         <activity
