Fixed Some Bugs which stopped it from building.
- Renamed CameraFavourites.java to CameraFavouritesActivity.java.
- Added the Filter Bar to the Favourites List.

--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -111,7 +111,7 @@
             android:label="@string/title_activity_compass_test" >
         </activity>
         <activity
-            android:name="com.example.wifimanagerprototype.CameraFavourites"
+            android:name="com.example.wifimanagerprototype.CameraFavouritesActivity"
             android:label="@string/title_activity_camera_favourites" >
         </activity>
         <activity
